--- a/firetrail/Cargo.toml
+++ b/firetrail/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "firetrail"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0.64"
-rocket = "0.5.0-rc.1"
+serde_json = "1.0.72"
+serde = "1.0.130"
+
+[[bin]]
+name = "parser"
+path = "src/bin/lifepath_parser.rs"
